# proactive-cache

./: LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  workflow.yml
examples/: benchmark.py  quickstart.py
proactive_cache/: __init__.py  cli.py  core.py  eviction.py  press.py  profiler.py  prototypes.py  utils.py
proactive_cache.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_proactive_cache.py
